[project]
name = "guitar-pedal"
version = "0.1.0"
description = ""
authors = [
    {name = "AdrianGuel",email = "adrianjguelc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pyo (>=1.0.5,<2.0.0)"
]

[tool.poetry]
packages = [{include = "guitar_pedal", from = "src"}]


[tool.poetry.dependencies]
pyo = {source = "pypi"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
